--- a/XMLEditorModule/Views/TreeEditorView.xaml
+++ b/XMLEditorModule/Views/TreeEditorView.xaml
@@ -25,6 +25,19 @@
         <Canvas x:Key="dup" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Name="appbar_page_duplicate" Width="38" Height="38">
             <Path  x:Name="path2" Width="38" Height="38" Canvas.Left="0" Canvas.Top="0" Stretch="Fill" Fill="#FF000000" Data="F1 M 27,47L 31,47L 31,53L 55,53L 55,35L 43,35L 43,23L 31,23L 31,41L 27,41L 27,19L 47.25,19L 59,30.75L 59,57L 27,57L 27,47 Z M 22,42L 40,42L 33,36L 39,36L 48.2918,44.3334L 39,52L 33,52L 40,46L 22,46L 22,42 Z M 47,24.25L 47,31L 53.75,31L 47,24.25 Z "/>
         </Canvas>
+
+        <Canvas  x:Key="monitor" Canvas.Left="0" Canvas.Top="0" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Name="appbar_monitor" Width="30" Height="30" Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
+            <Path Width="30" Height="30.0" Canvas.Left="0" Canvas.Top="0" Stretch="Fill" Fill="#FF000000" Data="F1 M 20,23.0002L 55.9998,23.0002C 57.1044,23.0002 57.9998,23.8956 57.9998,25.0002L 57.9999,46C 57.9999,47.1046 57.1045,48 55.9999,48L 41,48L 41,53L 45,53C 46.1046,53 47,53.8954 47,55L 47,57L 29,57L 29,55C 29,53.8954 29.8955,53 31,53L 35,53L 35,48L 20,48C 18.8954,48 18,47.1046 18,46L 18,25.0002C 18,23.8956 18.8954,23.0002 20,23.0002 Z M 21,26.0002L 21,45L 54.9999,45L 54.9998,26.0002L 21,26.0002 Z "/>
+        </Canvas>
+
+        <Canvas  x:Key="logger" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Name="appbar_database" Width="30" Height="30" Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
+            <Path Width="30" Height="30" Canvas.Left="0" Canvas.Top="0" Stretch="Fill" Fill="#FF000000" Data="F1 M 38,19C 47.3888,19 55,21.0147 55,23.5038L 55,25.5C 55,27.9853 47.3888,30 38,30C 28.6112,30 21,27.9853 21,25.5L 21,23.5C 21,21.0147 28.6112,19 38,19 Z M 55,52.5C 55,54.9853 47.3888,57 38,57C 28.6112,57 21,54.9853 21,52.5L 21,46.5C 21,48.9853 28.6112,51 38,51C 47.384,51 54.9921,48.9874 55,46.5039L 55,52.5 Z M 55,43.5C 55,45.9853 47.3888,48 38,48C 28.6112,48 21,45.9853 21,43.5L 21,37.5C 21,39.9853 28.6112,42 38,42C 47.384,42 54.9921,39.9874 55,37.5038L 55,43.5 Z M 55,34.5C 55,36.9853 47.3888,39 38,39C 28.6112,39 21,36.9853 21,34.5L 21,28.5C 21,30.9853 28.6112,33 38,33C 47.384,33 54.9921,30.9874 55,28.5038L 55,34.5 Z "/>
+        </Canvas>
+
+        <Canvas x:Key="namespace" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Name="appbar_folder_open" Width="76" Height="76" Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
+            <Path Width="44" Height="30" Canvas.Left="0" Canvas.Top="0" Stretch="Fill" Fill="#FF000000" Data="F1 M 19,50L 28,34L 63,34L 54,50L 19,50 Z M 19,28.0001L 35,28C 36,25 37.4999,24.0001 37.4999,24.0001L 48.75,24C 49.3023,24 50,24.6977 50,25.25L 50,28L 53.9999,28.0001L 53.9999,32L 27,32L 19,46.4L 19,28.0001 Z "/>
+        </Canvas>
+        
         <Path x:Key="arrow" Stroke="Black" />
         <Path x:Key="arrowHead" Stroke="Black" />
 
@@ -54,8 +67,6 @@
             </HierarchicalDataTemplate.Triggers>
         </HierarchicalDataTemplate>
 
-
-
         <HierarchicalDataTemplate x:Key="ConfigNodeTemplate">
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Queue Exchange Instance Configuration"  FontWeight="Bold"></TextBlock>
@@ -83,7 +94,6 @@
             </HierarchicalDataTemplate.ItemsSource>
         </HierarchicalDataTemplate>
 
-
         <HierarchicalDataTemplate x:Key="MonitorNodeTemplate">
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Monitor"></TextBlock>
@@ -104,8 +114,8 @@
 
         <HierarchicalDataTemplate x:Key="PipeNodeTemplate">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Foreground="PaleVioletRed" Text="Pipe - "></TextBlock>
-                <TextBlock Foreground="PaleVioletRed" Text="{Binding XPath=@name}" />
+                <TextBlock Foreground="Black" Text="PIPE: "></TextBlock>
+                <TextBlock Foreground="Red" Text="{Binding XPath=@name}" />
             </StackPanel>
             <HierarchicalDataTemplate.ItemsSource>
                 <Binding XPath="child::node()" />
@@ -133,7 +143,7 @@
 
         <HierarchicalDataTemplate x:Key="InputNodeTemplate">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Foreground="Red" Text="Input Node - "></TextBlock>
+                <TextBlock Foreground="Black" Text="Input Node: "></TextBlock>
                 <TextBlock Foreground="Red" Text="{Binding XPath=@name}" />
             </StackPanel>
             <HierarchicalDataTemplate.ItemsSource>
@@ -143,7 +153,7 @@
 
         <HierarchicalDataTemplate x:Key="OutputNodeTemplate">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Foreground="Green" Text="Output Node - "></TextBlock>
+                <TextBlock Foreground="Black" Text="Output Node: "></TextBlock>
                 <TextBlock Foreground="Green" Text="{Binding XPath=@name}" />
             </StackPanel>
             <HierarchicalDataTemplate.ItemsSource>
@@ -198,10 +208,16 @@
             </Grid.ColumnDefinitions>
 
             <!-- Column 0: Tree View of Config file -->
-            <TreeView Name="xmlTreeView" Background="LightYellow"
+            <TreeView Name="xmlTreeView"
                   ItemsSource="{Binding Source={StaticResource xmlDataProvider}, XPath=*}"
                   ItemTemplateSelector="{StaticResource myDataTemplateSelector}"
                   TreeViewItem.Selected="xmlTreeView_Selected"  >
+                <TreeView.Resources>
+                    <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}"
+                      Color="LightGray" />
+                    <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}"
+                      Color="Black" />
+                </TreeView.Resources>
                 <TreeView.ItemContainerStyle>
                     <Style TargetType="{x:Type TreeViewItem}">
                         <EventSetter Event="TreeViewItem.PreviewMouseRightButtonDown" Handler="TreeViewItem_PreviewMouseRightButtonDown"/>
@@ -220,12 +236,34 @@
                 Cursor="SizeWE"/>
 
             <!-- Column 2: Visual View of Config file -->
-            <Viewbox VerticalAlignment="Top" Stretch="Uniform"   Grid.Column="2">
-                <Grid HorizontalAlignment="Center">
-                    <StackPanel VerticalAlignment="Top" Panel.ZIndex="50" Grid.Column="0" Grid.ColumnSpan="2" x:Name="panel" Width="600" />
-                </Grid>
-            </Viewbox>
-
+            <Grid Grid.Column="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="20"/>
+                    <RowDefinition Height="80" />
+                    <RowDefinition Height="20"/>
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <TextBlock Text="Logger, Monitor and Namespaces" Grid.Row="0" Margin="10,0,0,0" FontWeight="Bold"/>
+                <Border Padding="5,5,0,0" Grid.Row="1">
+                    <StackPanel VerticalAlignment="Top"  x:Name="settingspanel" Orientation="Horizontal" Height="50" MaxWidth="600">
+                        <StackPanel.Resources>
+                            <Style TargetType="{x:Type Canvas}">
+                                <Setter Property="Margin" Value="0,0,50,0"/>
+                            </Style>
+                        </StackPanel.Resources>
+                    </StackPanel>
+                </Border>
+                <TextBlock Text="Pipes" Grid.Row="2" Margin="10,0,0,0"  FontWeight="Bold"/>
+                <Border BorderBrush="Gray" BorderThickness="1" Grid.Row="3">
+                    <ScrollViewer >
+                            <Viewbox VerticalAlignment="Top" Stretch="Uniform">
+                                <Grid HorizontalAlignment="Center" >
+                                    <StackPanel VerticalAlignment="Top" Panel.ZIndex="50" Grid.Column="0" Grid.ColumnSpan="2" x:Name="panel" Width="600" />
+                                </Grid>
+                            </Viewbox>
+                    </ScrollViewer>
+                </Border>
+            </Grid>
 
             <GridSplitter 
                 Background="Gray" 
