--- a/XMLEditorModule/Views/CommandsBarView.xaml
+++ b/XMLEditorModule/Views/CommandsBarView.xaml
@@ -5,7 +5,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="68" d:DesignWidth="626" x:Name="cmdBar">
-    
+
+    <UserControl.Resources>
+        <Path  x:Key="go"   Width="10.5832" Height="15.6667" Canvas.Left="0" Canvas.Top="0" Stretch="Fill" Fill="Green"  Data="F1 M 30.0833,22.1667L 50.6665,37.6043L 50.6665,38.7918L 30.0833,53.8333L 30.0833,22.1667 Z "/>
+        <Path x:Key="pack" Width="11.25" Height="10.25" Canvas.Left="0" Canvas.Top="0" Stretch="Fill" Fill="#FF000000" Data="F1 M 48,39L 56,39L 56,49L 63.25,49L 52,60.25L 40.75,49L 48,49L 48,39 Z M 20,20L 50.25,20L 56,25.75L 56,38L 52,38L 52,27.25L 48.75,24L 48,24L 48,37L 28,37L 28,24L 24,24L 24,52L 42.25,52L 46.25,56L 20,56L 20,20 Z M 39,24L 39,34L 44,34L 44,24L 39,24 Z "/>
+    </UserControl.Resources>
+
     <Grid >
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>         
