Export Control and Service Config

--- a/XMLEditorModule/Views/CommandsBarView.xaml
+++ b/XMLEditorModule/Views/CommandsBarView.xaml
@@ -9,6 +9,10 @@
     <UserControl.Resources>
         <Path  x:Key="go"   Width="10.5832" Height="15.6667" Canvas.Left="0" Canvas.Top="0" Stretch="Fill" Fill="Green"  Data="F1 M 30.0833,22.1667L 50.6665,37.6043L 50.6665,38.7918L 30.0833,53.8333L 30.0833,22.1667 Z "/>
         <Path x:Key="pack" Width="11.25" Height="10.25" Canvas.Left="0" Canvas.Top="0" Stretch="Fill" Fill="#FF000000" Data="F1 M 48,39L 56,39L 56,49L 63.25,49L 52,60.25L 40.75,49L 48,49L 48,39 Z M 20,20L 50.25,20L 56,25.75L 56,38L 52,38L 52,27.25L 48.75,24L 48,24L 48,37L 28,37L 28,24L 24,24L 24,52L 42.25,52L 46.25,56L 20,56L 20,20 Z M 39,24L 39,34L 44,34L 44,24L 39,24 Z "/>
+        <Path x:Key="save" Width="12.8333" Height="12.8333" Canvas.Left="0" Canvas.Top="0" Stretch="Fill" Fill="#FF000000" Data="F1 M 20.5833,20.5833L 55.4167,20.5833L 55.4167,55.4167L 45.9167,55.4167L 45.9167,44.3333L 30.0833,44.3333L 30.0833,55.4167L 20.5833,55.4167L 20.5833,20.5833 Z M 33.25,55.4167L 33.25,50.6667L 39.5833,50.6667L 39.5833,55.4167L 33.25,55.4167 Z M 26.9167,23.75L 26.9167,33.25L 49.0833,33.25L 49.0833,23.75L 26.9167,23.75 Z "/>
+        <Path x:Key="open" Width="15" Height="12" Canvas.Left="0" Canvas.Top="0" Stretch="Fill" Fill="#FF000000" Data="F1 M 19,50L 28,34L 63,34L 54,50L 19,50 Z M 19,28.0001L 35,28C 36,25 37.4999,24.0001 37.4999,24.0001L 48.75,24C 49.3023,24 50,24.6977 50,25.25L 50,28L 53.9999,28.0001L 53.9999,32L 27,32L 19,46.4L 19,28.0001 Z "/>
+        <Path x:Key="export" Width="12" Height="13" Canvas.Left="0" Canvas.Top="0" Stretch="Fill" Fill="#FF000000" Data="F1 M 25,52L 51,52L 51,57L 25,57L 25,52 Z M 35,16L 41,16L 41,36.5L 49,27L 49,36.5L 38,49L 27,36.5L 27,27L 35,36.5L 35,16 Z "/>
+        <Path x:Key="new" Width="13" Height="13" Canvas.Left="0" Canvas.Top="0" Stretch="Fill" Fill="#FF000000" Data="F1 M 48,61.25L 36.5,50.5L 48,39.75L 48,45.25L 41.75,50.5L 48,55.75L 48,61.25 Z M 52,61.25L 52,55.75L 58.25,50.5L 52,45.25L 52,39.75L 63.5,50.5L 52,61.25 Z M 20,17L 42.25,17L 55,29.75L 55,41.5L 52,38.5L 52,34L 38,34L 38,21L 24,21L 24,55L 39.5,55L 43.75,59L 20,59L 20,17 Z M 42,22.25L 42,30L 49.75,30L 42,22.25 Z "/>
     </UserControl.Resources>
 
     <Grid >
