--- a/ConfigEditor/Shell.xaml
+++ b/ConfigEditor/Shell.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:editorModule="clr-namespace:WXE.Internal.Tools.ConfigEditor.XMLEditorModule.Views;assembly=WXE.Internal.Tools.ConfigEditor.XMLEditorModule"
+        Icon="QXEd.ico"
         Title="Queue Exchange Configuration Utility" Height="800" Width="1400" WindowStartupLocation="CenterScreen" Background="WhiteSmoke">
     <Window.Resources>
         
