Revert "Code QA"
This reverts commit bf1e3a4d4de9da64e6041296f600e0059cd48caa.

--- a/XMLEditorModule/Views/TreeEditorView.xaml
+++ b/XMLEditorModule/Views/TreeEditorView.xaml
@@ -264,7 +264,7 @@
             <TreeView Name="xmlTreeView"
                   ItemsSource="{Binding Source={StaticResource xmlDataProvider}, XPath=*}"
                   ItemTemplateSelector="{StaticResource myDataTemplateSelector}"
-                  TreeViewItem.Selected="XmlTreeView_Selected"  >
+                  TreeViewItem.Selected="xmlTreeView_Selected"  >
                 <TreeView.Resources>
                     <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}"
                       Color="LightGray" />
